# k3s-intergration

./: .gitignore  files.md  readme.md
cmd/vlan-cni/: main.go
deployments/: configmap.yaml  daemonset.yaml
deployments/network-attachment-definitions/: vlan100.yaml
examples/: pod-with-vlan.yaml
gocni/: Dockerfile.gocni  Makefile  go.mod
gocni/pkg/config/: config.go
gocni/pkg/plugin/: vlan.go
gocni/scripts/: README.MD  install.sh
k3s/: install.sh
k8s/k3s/multi-node/: flannel.sh  install.sh
k8s/minikube/: install-socni-ctl.sh
pkg/plugin/: readme.md
socni/: Cargo.toml  Dockerfile.socni  MINIKUBE.md  Makefile  README.md  devops.sh  nextSteps.md
socni/integrations/flannel/: README.MD
socni/manifests/: daemonset.yaml  socni-configmap.yaml  socni-daemonset.yaml  socni-example-pod.yaml  socni-installation.md  socni-multi-tenant-example.yaml  socni-network-attachment-definition.yaml  socni-rbac.yaml
socni/manifests/network-attachment-definitions/: README.MD
socni/policy-examples/: template.md
socni/scripts/: install-cli.sh  install-cni.sh  install-ctl.sh  install-minikube.sh  test_w_aranya.sh
socni/src/: lib.rs
socni/src/commands/: mod.rs
socni/src/config/: mod.rs
socni/src/integrations/: aranya.rs  mod.rs
socni/src/plugin/: mod.rs
socni/src/types/: mod.rs
socni/tests/: README.MD  cni_types_test.rs  integration_test.rs  vlan_access_test.rs
socni/tests/policies/: vlan_policy.rs
src/plugin/: mod.rs
