[package]
name = "vlan-cni"
version = "0.1.0"
edition = "2021"
description = "A Rust-based VLAN CNI plugin for Kubernetes"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[lib]
name = "vlan_cni"
path = "src/lib.rs"

[[bin]]
name = "vlan-cni"
path = "src/bin/vlan-cni.rs"

[[bin]]
name = "socni-ctl"
path = "src/bin/socni-ctl/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix = { version = "0.29", features = ["sched", "net"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
ipnetwork = "0.21.1"
itertools = "0.14"