[package]
name = "socni"
version = "0.1.0"
edition = "2021"
description = "A secure Rust-based VLAN CNI plugin for Kubernetes using Aranya for network isolation and policy enforcement"
authors = ["Deon Saunders <asaunders@spideroak.com>"]
license = "MIT"
rust-version = "1.81"

[lib]
name = "socni"
path = "src/lib.rs"

[[bin]]
name = "socni"
path = "src/bin/vlan-cni.rs"

[[bin]]
name = "socni-ctl"
path = "src/bin/socni-ctl/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.86"
thiserror = "1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
nix = { version = "0.26.4", features = ["fs", "sched", "user"] }
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
ipnetwork = "0.20"
itertools = "0.11"
aranya-client = { version = "0.5.1", path = "../aranya/crates/aranya-client" }
aranya-daemon-api = { version = "0.5.1", path = "../aranya/crates/aranya-daemon-api" }
aranya-crypto = { version = "0.5.0", features = ["alloc", "fs-keystore", "clone-aead", "std"] }
ring = "0.17"
uuid = { version = "1.4", features = ["v4"] }
libc = "0.2"

[package.metadata]
min_privileged = true